--- a/podstrona.html
+++ b/podstrona.html
@@ -15,7 +15,7 @@
     </div>
     
     <div id="main">
-    <a href="strona.html">Strona Główna</a> | <a href="podstrona.html">Oferta</a>
+    <a href="index.html">Strona Główna</a> | <a href="podstrona.html">Oferta</a>
     </div>
     
     <center><div id="lewo">
